2010-02-23 Caolán McNamara <cmc at OOo>:
	* hun#2314461 improve ispell-alike mode
	* hun#2784983 improve default language detection
	* hun#2812045 fix some compiler warnings
	* hun#2910695 survive missing HOME dir
	* hun#2934195 fix suggestmgr crash
	* hun#2921129 remove unused variables
	* hun#2826164 make sure make check uses the in-tree libhunspell
	* bump toolchain to support --disable-rpath
	* hun#2843984 fix coverity warning
	* hun#2843986 fix coverity warning
	* hun#2077630 add iconv lib
	* make gcc strict-aliasing warning free
	* make cppcheck warning free
2008-11-01 Németh László <nemeth at OOo>:
	* replist.*, hunspell.cxx, affixmgr.cxx: new input and output
          conversion support, see ICONV and OCONV keywords in the Hunspell(4)
          manual page and the test examples. The input/output conversion
          problem of syllabic languages reported by Daniel Yacob and
          Shewangizaw Gulilat.
        - tests/{iconv,oconv}.*: test examples

	* tools/wordforms: word generation script for dictionary developers
          (Hunspell version of the unmunch program)

	* hunspell/hunspell.cxx: extended BREAK feature: ^ and $ mean in break
          patterns the beginning and end of the word.
	- tests/BREAK.*: modified examples.

	* hunspell/hunspell.cxx: set default break at hyphen characters. 
	  The associated problem reported by S Page in Hunspell Bug 2174061.
          See Mozilla Bug ID 355178 and OOo Issue 64400, too.
	- tests/breakdefault.*: test data
	  The following definition is equivalent of the default word break:

	  BREAK 3
          BREAK -
          BREAK ^-
          BREAK -$

	* affixmgr.cxx: SIMPLIFIEDTRIPLE is a new affix file keyword to allow
          simplified forms of the compound words with triple repeating letters.
	  It is useful for Swedish and Norwegian languages.
 
	* affixmgr.cxx: extend CHECKCOMPOUNDPATTERN to support
          alternations of compound words for example by sandhi